# chaining-iterator

./: .gitignore  LICENSE-MIT  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
chaining_iterator/: __init__.py
tests/: test_all.py
