[tool.poetry]
name = "chaining-iterator"
version = "0.1.0"
description = "An iterator to make function chaining possible with some extra features."
authors = ["Michael Richter <mr@osor.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-check = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-check = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]